saque algunas rutas innecesarias

--- a/config/database.yml
+++ b/config/database.yml
@@ -11,19 +11,12 @@ default: &default
 
 development:
   <<: *default
-  database: dockerdb
-  password: dockerpass
+  database: postgres_mo_repository
+  password: password
   pool: 5
-  username: dockeruser
+  username: postgres
   encoding: UTF-8
   host: localhost
-
-#database: postgres_mo_repository
-#password: password
-#pool: 5
-#username: postgres
-#encoding: UTF-8
-#host: localhost
 
 
 # Warning: The database defined as "test" will be erased and
