--- a/config/database.yml
+++ b/config/database.yml
@@ -25,6 +25,7 @@ development:
 test:
   <<: *default
   #database: db/test.sqlite3
+  adapter: sqlite3
   database: ":memory:"
   verbosity: silent
 
